tests/fixtures/invalid/pow_none_dict_float.py
# Cannot call pow() with None, Dict[str, int], Float
x = pow(None, {"a": 1}, 1.0)
